--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev -p 3005",
     "dev:legacy": "NODE_OPTIONS=\"--openssl-legacy-provider\" next dev -p 3005",
-    "build": "next build",
+    "build": "NODE_OPTIONS=\"--openssl-legacy-provider\" next build",
+    "build:legacy": "NODE_OPTIONS=\"--openssl-legacy-provider\" next build",
     "start": "next start"
   },
   "dependencies": {
