--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3005",
     "dev:legacy": "NODE_OPTIONS=\"--openssl-legacy-provider\" next dev -p 3005",
     "build": "NODE_OPTIONS=\"--openssl-legacy-provider\" next build",
-    "build:legacy": "NODE_OPTIONS=\"--openssl-legacy-provider\" next build",
+    "build:vercel": "next build",
     "start": "next start"
   },
   "dependencies": {
