--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3005",
-    "dev:legacy": "NODE_OPTIONS=\"--openssl-legacy-provider\" next dev -p 3005",
-    "build": "NODE_OPTIONS=\"--openssl-legacy-provider\" next build",
-    "build:vercel": "next build",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
@@ -21,7 +19,7 @@
     "micro": "^9.3.4",
     "moment": "^2.29.1",
     "mongodb": "^3.6.9",
-    "next": "11.0.1",
+    "next": "12.3.4",
     "next-auth": "^3.27.2",
     "next-pwa": "^5.2.23",
     "nprogress": "^0.2.0",
